# dis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: STEP_09_10_BOUNDARIES_AND_PROBLEM_LOCATION.md  STEP_09_11_INPUT_ROBUSTNESS.md  STEP_09_12_ATTACKER_INFORMED_DEFENSE.md  STEP_09_13_BYPASS_RESILIENCE_LAB.md  STEP_09_14_RESULT_TRIAGE.md  STEP_09_15_REGRESSION_GUARD.md  STEP_09_5_SAFE_SCOPE.md  STEP_09_6_VMPROTECT_PROFILE.md  STEP_09_8_CRYPTO_TOOLS_SCOPE.md  STEP_09_9_VIEWER_TOOLS_SCOPE.md
src/aia_reverse_lab/: __init__.py  cli.py  models.py
src/aia_reverse_lab/analyzers/: __init__.py  anti_analysis.py  api_classifier.py  crypto_analyzer.py  data_requirements.py  disassembler.py  exposure_assessor.py  flow_summary.py  patch_diff.py  pe_analyzer.py  pe_features.py  problem_locator.py  protector_detector.py  risk_scorer.py  string_analyzer.py  vmprotect_profile.py  yara_scanner.py
src/aia_reverse_lab/reporting/: __init__.py  report_generator.py
src/aia_reverse_lab/storage/: __init__.py  database.py
src/aia_reverse_lab/tools/: __init__.py  bypass_resilience.py  crypto_transform.py  dump_viewer.py  memory_dump_analyzer.py  opcode_viewer.py  pcap_analyzer.py  regression_guard.py  result_triage.py  robustness_tester.py
tests/: test_core_tools.py
